[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Shiporange.png" type="Texture" id=1]
[ext_resource path="res://Assets/Exhaust.png" type="Texture" id=2]
[ext_resource path="res://Player/Shiporange.gd" type="Script" id=3]
[ext_resource path="res://Assets/shield3.png" type="Texture" id=4]
[ext_resource path="res://Weapons/PewPew.tscn" type="PackedScene" id=5]
[ext_resource path="res://Weapons/Rocket_Launcher.tscn" type="PackedScene" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
direction = Vector3( 0, 50, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 2 )

[sub_resource type="CircleShape2D" id=4]
radius = 74.027

[node name="Player" type="KinematicBody2D"]
position = Vector2( 512, 300 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Exhaust" type="Sprite" parent="."]
position = Vector2( -1.50001, 27 )
scale = Vector2( 0.1925, 0.071875 )
texture = ExtResource( 2 )

[node name="Particles2D" type="Particles2D" parent="Exhaust"]
position = Vector2( -2.59741, -13.9131 )
lifetime = 0.75
process_material = SubResource( 3 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.4782e-05, -3.57628e-06 )
scale = Vector2( 0.71875, 0.75 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.875, 0.90625 )
polygon = PoolVector2Array( 0, -33.1035, 5.71429, -24.2759, 28.5714, 20.9655, 29.7143, 30.8965, 20.5714, 27.5862, 0, 20.9655, -21.7143, 28.6897, -29.7143, 29.7931, -28.5714, 23.1724, -1.14288, -33.1035, -1.14288, -33.1035 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -3.8147e-06, 0.445534 )
scale = Vector2( 1, 0.991071 )
polygon = PoolVector2Array( 0, -31.7288, 6, -20.6297, 27, 27.8027, 19, 27.8027, 0, 18, -15, 26, -27, 27.8027 )

[node name="Shield" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Shield"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1600
limit_bottom = 1200

[node name="Primary" type="Node2D" parent="."]

[node name="PewPew" parent="Primary" instance=ExtResource( 5 )]

[node name="Secondary" type="Node2D" parent="."]

[node name="Rocket_Launcher" parent="Secondary" instance=ExtResource( 6 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Shield" to="." method="_on_Shield_area_entered"]
[connection signal="body_entered" from="Shield" to="." method="_on_Shield_body_entered"]
